MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
EXTRA_DIST = build build-package.in libtool-bundle opensc-uninstall \
	resources \
	resources/background.jpg \
	resources/InstallationCheck.strings \
	resources/License.html \
	resources/ReadMe.html.in \
	scripts \
	scripts/InstallationCheck \
	scripts/postflight
