MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
EXTRA_DIST = build build-package.in Distribution.xml.in libtool-bundle opensc-uninstall \
	resources \
	resources/background.jpg \
	resources/License.html \
	resources/ReadMe.html.in \
	resources/Welcome.html.in \
	scripts \
	scripts/postinstall \
	uninstaller-scripts \
	uninstaller-scripts/postinstall
