MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
EXTRA_DIST = build \
	build-openssl-macos.sh \
	Distribution.xml.in \
	libtool-bundle \
	OpenSC_applescripts.entitlements \
	OpenSC_binaries.entitlements \
	OpenSC_Notify.applescript \
	OpenSC_Uninstaller.applescript \
	opensc-uninstall \
	target.plist \
	target_startup.plist \
	target_token.plist \
	resources \
	resources/background.jpg \
	resources/Welcome.html.in \
	scripts \
	scripts/postinstall
